--- a/src/assets/css/header_area.css
+++ b/src/assets/css/header_area.css
@@ -1,7 +1,7 @@
 .header-area.color-saki {
     background: linear-gradient(to right, #fb4f60, #fbb7a1);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #ffffff;
     }
 }
@@ -9,7 +9,7 @@
 .header-area.color-temari {
     background: linear-gradient(to right, #23b3e6, #81e5de);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #ffffff;
     }
 }
@@ -17,7 +17,7 @@
 .header-area.color-kotone {
     background: linear-gradient(to right, #f3d51d, #fbb5d1);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #333333;
     }
 }
@@ -25,7 +25,7 @@
 .header-area.color-mao {
     background: linear-gradient(to right, #bf5cc4, #f6aba4);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #ffffff;
     }
 }
@@ -33,7 +33,7 @@
 .header-area.color-lilja {
     background: linear-gradient(to right, #cee0e0, #92cad4);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #333333;
     }
 }
@@ -41,7 +41,7 @@
 .header-area.color-china {
     background: linear-gradient(to right, #fa891e, #fb5e52);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #ffffff;
     }
 }
@@ -49,7 +49,7 @@
 .header-area.color-sumika {
     background: linear-gradient(to right, #8fdc57, #c8e01b);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #333333;
     }
 }
@@ -57,7 +57,7 @@
 .header-area.color-hiro {
     background: linear-gradient(to right, #00bcd3, #507ff9);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #ffffff;
     }
 }
@@ -65,7 +65,7 @@
 .header-area.color-sena {
     background: linear-gradient(to right, #fbac26, #f1e769);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #333333;
     }
 }
@@ -73,7 +73,7 @@
 .header-area.color-misuzu {
     background: linear-gradient(to right, #6ba2f7, #cdadfa);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #ffffff;
     }
 }
@@ -81,7 +81,7 @@
 .header-area.color-ume {
     background: linear-gradient(to right, #f34a29, #ecc64b);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #ffffff;
     }
 }
@@ -89,7 +89,7 @@
 .header-area.color-rinami {
     background: linear-gradient(to right, #f97dbd, #f0b7f9);
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #ffffff;
     }
 }
@@ -97,7 +97,7 @@
 .header-area.color-default {
     background: #958b7f;
 
-    .header-tab-name, .header-tab-button, .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button, .schedule-tab-scroll-button {
         color: #ffffff;
     }
 }
@@ -170,7 +170,7 @@
             background: rgba(255, 255, 255, 0.3);
         }
 
-        .header-operation-button {
+        .header-operation-button, .schedule-tab-scroll-button {
             background: none;
             border: none;
             cursor: pointer;
@@ -183,69 +183,99 @@
     .schedule-tab-area {
         display: flex;
         flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: flex-start;
-        width: 100%;
-        height: 48px;
-        overflow-x: auto;
-        scrollbar-gutter: stable;
+        align-items: flex-end;
 
-        .schedule-tab {
-            width: 20%;
-            min-width: 15%;
-            max-width: 30%;
+        .schedule-tab-scroll-area {
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            background: #efefef;
-            border-top: 2px solid #666666;
-            border-right: 2px solid #666666;
-            border-left: none;
-            border-bottom: none;
-            cursor: default;
+            padding-right: 8px;
 
-            @media (max-width: 600px) {
-                width: 50%;
-                min-width: 40%;
-                max-width: 50%;
+            .schedule-tab-scroll {
+                padding: 0 4px;
+                border-radius: 4px;
+            }
+
+            .schedule-tab-scroll:hover {
+                background: rgba(255, 255, 255, 0.3);
+            }
+
+            .schedule-tab-scroll-button {
+                background: none;
+                border: none;
+                cursor: pointer;
+                outline: none;
+                padding: 0;
+                appearance: none;
             }
         }
 
-        .schedule-tab.active {
-            background: #ffffff;
-        }
-
-        .schedule-tab-name-area {
-            width: 100%;
-            height: 100%;
+        .schedule-tab-card-area {
             display: flex;
-            align-items: center;
-        }
-
-        .schedule-tab-name {
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: flex-start;
             width: 100%;
-            color: #333333;
-            font-size: 12px;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            padding: 0 4px;
-        }
+            height: 36px;
+            overflow-x: hidden;
+            scrollbar-gutter: stable;
 
-        .schedule-tab-close-button {
-            min-width: 10%;
-            background: none;
-            border: none;
-            cursor: pointer;
-            outline: none;
-            padding: 0;
-            appearance: none;
-            border-radius: 4px;
-        }
+            .schedule-tab-card {
+                width: 20%;
+                min-width: 20%;
+                max-width: 30%;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                background: #efefef;
+                border-top: 2px solid #666666;
+                border-right: 2px solid #666666;
+                border-left: none;
+                border-bottom: none;
+                cursor: default;
 
-        .schedule-tab-close-button:hover {
-            background: #dfdfdf;
+                @media (max-width: 600px) {
+                    width: 50%;
+                    min-width: 40%;
+                    max-width: 50%;
+                }
+            }
+
+            .schedule-tab-card.active {
+                background: #ffffff;
+            }
+
+            .schedule-tab-card-name-area {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+            }
+
+            .schedule-tab-card-name {
+                width: 100%;
+                color: #333333;
+                font-size: 12px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                padding: 0 4px;
+            }
+
+            .schedule-tab-card-close-button {
+                min-width: 10%;
+                background: none;
+                border: none;
+                cursor: pointer;
+                outline: none;
+                padding: 0;
+                appearance: none;
+                border-radius: 4px;
+            }
+
+            .schedule-tab-card-close-button:hover {
+                background: #dfdfdf;
+            }
         }
     }
 }
